end of app icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidBasicsFunS1</string>
+    <string name="happy_tuesday">Happy Tuesday</string>
 </resources>
